--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "nextplate",
+  "name": "perspectaLabs",
   "version": "1.4.4",
   "description": "Nextjs and Tailwindcss boilerplate",
   "author": "zeon.studio",
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
